@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<crystal><generator>Gnome Crystal 0.5.2</generator><lattice>simple cubic</lattice><cell a="558" b="558" c="558" alpha="90" beta="90" gamma="90"/><size><position id="start" x="-0.2" y="-0.2" z="-0.2"/><position id="end" x="1.2" y="1.2" z="1.2"/></size><atom element="C"><position x="0.5" y="0.5"/><radius type="vdW"/></atom><atom element="C"><position x="0.5" y="0" z="0.5"/><radius type="vdW"/></atom><atom element="C"><position x="0" y="0.5" z="0.5"/><radius type="vdW"/></atom><atom element="C"><position x="0" y="0"/><radius type="vdW"/></atom><atom element="O"><position x="0.109676" y="0.109676" z="0.109676"/><radius type="vdW"/></atom><atom element="O"><position x="0.109676" y="0.390324" z="0.609676"/><radius type="vdW"/></atom><atom element="O"><position x="0.390324" y="0.609676" z="0.109676"/><radius type="vdW"/></atom><atom element="O"><position x="0.390324" y="0.890324" z="0.609676"/><radius type="vdW"/></atom><atom element="O"><position x="0.609676" y="0.109676" z="0.390324"/><radius type="vdW"/></atom><atom element="O"><position x="0.609676" y="0.390324" z="0.890324"/><radius type="vdW"/></atom><atom element="O"><position x="0.890324" y="0.609676" z="0.390324"/><radius type="vdW"/></atom><atom element="O"><position x="0.890324" y="0.890324" z="0.890324"/><radius type="vdW"/></atom><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></crystal>
+<gcry:crystal xmlns:gcry="http://www.nongnu.org/gcrystal"><generator>Gnome Crystal 0.8.5</generator><lattice>simple cubic</lattice><cell a="558" b="558" c="558" alpha="90" beta="90" gamma="90"/><size><position id="start" x="-0.2" y="-0.2" z="-0.2"/><position id="end" x="1.2" y="1.2" z="1.2"/></size><atom element="C"><position x="0.5" y="0.5"/><radius type="vdW"/></atom><atom element="C"><position x="0.5" y="0" z="0.5"/><radius type="vdW"/></atom><atom element="C"><position x="0" y="0.5" z="0.5"/><radius type="vdW"/></atom><atom element="C"><position x="0" y="0"/><radius type="vdW"/></atom><atom element="O"><position x="0.109676" y="0.109676" z="0.109676"/><radius type="vdW"/></atom><atom element="O"><position x="0.109676" y="0.390324" z="0.609676"/><radius type="vdW"/></atom><atom element="O"><position x="0.390324" y="0.609676" z="0.109676"/><radius type="vdW"/></atom><atom element="O"><position x="0.390324" y="0.890324" z="0.609676"/><radius type="vdW"/></atom><atom element="O"><position x="0.609676" y="0.109676" z="0.390324"/><radius type="vdW"/></atom><atom element="O"><position x="0.609676" y="0.390324" z="0.890324"/><radius type="vdW"/></atom><atom element="O"><position x="0.890324" y="0.609676" z="0.390324"/><radius type="vdW"/></atom><atom element="O"><position x="0.890324" y="0.890324" z="0.890324"/><radius type="vdW"/></atom><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></gcry:crystal>
