@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<crystal><generator>Gnome Crystal 0.5.2</generator><lattice>face-centered cubic</lattice><cell a="564" b="564" c="564" alpha="90" beta="90" gamma="90"/><size><position id="start" x="0" y="0"/><position id="end" x="1" y="1" z="1"/></size><atom element="Cl"><position x="0" y="0"/><radius type="ionic" scale="Shannon" charge="-1" cn="6"/></atom><atom element="Na"><position x="0.5" y="0"/><radius type="ionic" scale="Shannon" charge="1" cn="6"/></atom><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></crystal>
+<gcry:crystal xmlns:gcry="http://www.nongnu.org/gcrystal"><generator>Gnome Crystal 0.8.5</generator><lattice>face-centered cubic</lattice><cell a="564" b="564" c="564" alpha="90" beta="90" gamma="90"/><size><position id="start" x="0" y="0"/><position id="end" x="1" y="1" z="1"/></size><atom element="Cl"><position x="0" y="0"/><radius type="ionic" scale="Shannon" charge="-1" cn="6"/></atom><atom element="Na"><position x="0.5" y="0"/><radius type="ionic" scale="Shannon" charge="1" cn="6"/></atom><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></gcry:crystal>
