@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<crystal><generator>Gnome Crystal 0.5.2</generator><lattice>face-centered cubic</lattice><cell a="356" b="356" c="356" alpha="90" beta="90" gamma="90"/><size><position id="start" x="0" y="0"/><position id="end" x="1" y="1" z="1"/></size><atom element="C"><position x="0.25" y="0.25" z="0.25"/><radius type="covalent" value="50"/></atom><atom element="C"><position x="0" y="0"/><radius type="covalent" value="50"/></atom><line type="edges"><radius>10</radius><position id="end" x="0" y="0"/><color red="0.825758" green="0.825758" blue="0.825758"/></line><line type="normal"><radius>10</radius><position id="start" x="0.5" y="0.5"/><position id="end" x="0.25" y="0.25" z="0.25"/><color red="0.931818" green="0.553821" blue="0"/></line><line type="normal"><radius>10</radius><position id="start" x="0.5" y="0" z="0.5"/><position id="end" x="0.25" y="0.25" z="0.25"/><color red="0.931818" green="0.553821" blue="0"/></line><line type="normal"><radius>10</radius><position id="start" x="0" y="0.5" z="0.5"/><position id="end" x="0.25" y="0.25" z="0.25"/><color red="0.931818" green="0.553821" blue="0"/></line><line type="normal"><radius>10</radius><position id="start" x="0" y="0"/><position id="end" x="0.25" y="0.25" z="0.25"/><color red="0.931818" green="0.553821" blue="0"/></line><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></crystal>
+<gcry:crystal xmlns:gcry="http://www.nongnu.org/gcrystal"><generator>Gnome Crystal 0.8.5</generator><lattice>face-centered cubic</lattice><cell a="356" b="356" c="356" alpha="90" beta="90" gamma="90"/><size><position id="start" x="0" y="0"/><position id="end" x="1" y="1" z="1"/></size><atom element="C"><position x="0.25" y="0.25" z="0.25"/><radius type="covalent" value="50"/></atom><atom element="C"><position x="0" y="0"/><radius type="covalent" value="50"/></atom><line type="edges"><radius>10</radius><position id="end" x="0" y="0"/><color red="0.825758" green="0.825758" blue="0.825758"/></line><line type="normal"><radius>10</radius><position id="start" x="0.5" y="0.5"/><position id="end" x="0.25" y="0.25" z="0.25"/><color red="0.931818" green="0.553821" blue="0"/></line><line type="normal"><radius>10</radius><position id="start" x="0.5" y="0" z="0.5"/><position id="end" x="0.25" y="0.25" z="0.25"/><color red="0.931818" green="0.553821" blue="0"/></line><line type="normal"><radius>10</radius><position id="start" x="0" y="0.5" z="0.5"/><position id="end" x="0.25" y="0.25" z="0.25"/><color red="0.931818" green="0.553821" blue="0"/></line><line type="normal"><radius>10</radius><position id="start" x="0" y="0"/><position id="end" x="0.25" y="0.25" z="0.25"/><color red="0.931818" green="0.553821" blue="0"/></line><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></gcry:crystal>
