@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<crystal><generator>Gnome Crystal 0.5.2</generator><lattice>hexagonal</lattice><cell a="246" b="246" c="670" alpha="90" beta="90" gamma="120"/><size><position id="start" x="-0.5" y="-0.5"/><position id="end" x="3.5" y="3.5" z="1"/></size><atom element="C"><position x="0.333333" y="0.666667" z="0.5"/><radius type="covalent" value="20"/></atom><atom element="C"><position x="0.666667" y="0.333333"/><radius type="covalent" value="20"/></atom><atom element="C"><position x="0" y="0"/><radius type="covalent" value="20"/></atom><atom element="C"><position x="0" y="0" z="0.5"/><radius type="covalent" value="20"/></atom><line type="normal"><radius>7</radius><position id="start" x="0" y="0"/><position id="end" x="0.666667" y="0.333333"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="0" y="0" z="0.5"/><position id="end" x="0.333333" y="0.666667" z="0.5"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="0" y="1" z="0.5"/><position id="end" x="0.333333" y="0.666667" z="0.5"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="1" y="0"/><position id="end" x="0.666667" y="0.333333"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="1" y="1"/><position id="end" x="0.666667" y="0.333333"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="1" y="1" z="0.5"/><position id="end" x="0.333333" y="0.666667" z="0.5"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><cleavage h="-1" k="1" l="0" planes="1"/><cleavage h="1" k="-1" l="0" planes="1"/><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></crystal>
+<gcry:crystal xmlns:gcry="http://www.nongnu.org/gcrystal"><generator>Gnome Crystal 0.8.5</generator><lattice>hexagonal</lattice><cell a="246" b="246" c="670" alpha="90" beta="90" gamma="120"/><size><position id="start" x="-0.5" y="-0.5"/><position id="end" x="3.5" y="3.5" z="1"/></size><atom element="C"><position x="0.333333" y="0.666667" z="0.5"/><radius type="covalent" value="20"/></atom><atom element="C"><position x="0.666667" y="0.333333"/><radius type="covalent" value="20"/></atom><atom element="C"><position x="0" y="0"/><radius type="covalent" value="20"/></atom><atom element="C"><position x="0" y="0" z="0.5"/><radius type="covalent" value="20"/></atom><line type="normal"><radius>7</radius><position id="start" x="0" y="0"/><position id="end" x="0.666667" y="0.333333"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="0" y="0" z="0.5"/><position id="end" x="0.333333" y="0.666667" z="0.5"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="0" y="1" z="0.5"/><position id="end" x="0.333333" y="0.666667" z="0.5"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="1" y="0"/><position id="end" x="0.666667" y="0.333333"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="1" y="1"/><position id="end" x="0.666667" y="0.333333"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><line type="normal"><radius>7</radius><position id="start" x="1" y="1" z="0.5"/><position id="end" x="0.333333" y="0.666667" z="0.5"/><color red="0.575758" green="0.575758" blue="0.575758"/></line><cleavage h="-1" k="1" l="0" planes="1"/><cleavage h="1" k="-1" l="0" planes="1"/><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></gcry:crystal>
