@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<crystal><generator>Gnome Crystal 0.5.2</generator><lattice>face-centered cubic</lattice><cell a="351" b="351" c="351" alpha="90" beta="90" gamma="90"/><size><position id="start" x="0" y="0"/><position id="end" x="3" y="3" z="3"/></size><atom element="Ni"><position x="0" y="0"/><radius type="metallic"/></atom><cleavage h="1" k="1" l="1" planes="3"/><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></crystal>
+<gcry:crystal xmlns:gcry="http://www.nongnu.org/gcrystal"><generator>Gnome Crystal 0.8.5</generator><lattice>face-centered cubic</lattice><cell a="351" b="351" c="351" alpha="90" beta="90" gamma="90"/><size><position id="start" x="0" y="0"/><position id="end" x="3" y="3" z="3"/></size><atom element="Ni"><position x="0" y="0"/><radius type="metallic"/></atom><cleavage h="1" k="1" l="1" planes="3"/><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></gcry:crystal>
