@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<crystal><generator>Gnome Crystal 0.5.2</generator><lattice>hexagonal</lattice><cell a="268" b="268" c="498" alpha="90" beta="90" gamma="120"/><size><position id="start" x="0" y="0"/><position id="end" x="2" y="2" z="1"/></size><atom element="Zn"><position x="0.666667" y="0.333333" z="0.5"/><radius type="metallic"/></atom><atom element="Zn"><position x="0" y="0"/><radius type="metallic"/></atom><cleavage h="-1" k="1" l="0" planes="1"/><cleavage h="1" k="-1" l="0" planes="2"/><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></crystal>
+<gcry:crystal xmlns:gcry="http://www.nongnu.org/gcrystal"><generator>Gnome Crystal 0.8.5</generator><lattice>hexagonal</lattice><cell a="268" b="268" c="498" alpha="90" beta="90" gamma="120"/><size><position id="start" x="0" y="0"/><position id="end" x="2" y="2" z="1"/></size><atom element="Zn"><position x="0.666667" y="0.333333" z="0.5"/><radius type="metallic"/></atom><atom element="Zn"><position x="0" y="0"/><radius type="metallic"/></atom><cleavage h="-1" k="1" l="0" planes="1"/><cleavage h="1" k="-1" l="0" planes="2"/><view><orientation psi="70" theta="10" phi="-90"/><fov>10</fov><color id="background" red="0.999289" green="0.999289" blue="0.999289"/></view></gcry:crystal>
